--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.1.12",
     "bootstrap": "^5.3.8",
     "lucide-react": "^0.542.0",
