--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "GPL-3.0-only",
+
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
