--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "license": "GPL-3.0-only",
-
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -15,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.1.12",
+    "@vercel/analytics": "^1.5.0",
     "bootstrap": "^5.3.8",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
